--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
   },
